# pygetmarc

./: ABOUT.rst  CHANGELOG.rst  Jenkinsfile  MANIFEST.in  Makefile  README.rst  make.bat  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
ci/docker/devpi/deploy/: Dockerfile
ci/docker/linux/: Dockerfile
ci/docker/windows/: Dockerfile
docs/: Makefile  make.bat
docs/source/: conf.py  contents.rst  index.rst  installPip.rst  installRelease.rst  installSourceCLI.rst  installation.rst  pygetmarc.rst  usage.rst
tests/: 1099891.marc  test_get_marc.py  test_modifers.py
uiucprescon/pygetmarc/: __init__.py  __main__.py  modifiers.py  request.py
