[metadata]
name = uiucprescon-getmarc
version = 0.0.1
url = http://www.library.illinois.edu/dccdocs/pygetmarc
download_url = https://github.com/UIUCLibrary/pygetmarc
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Uses the Get Bib Record Web Service to get marc data from the UIUC Voyager Library Catalog
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu

[mypy]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
addopts = --verbose -s -m "not intergration"
norecursedirs = build
markers = intergration: Tests that require a physical connection to the service to run

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1
